[package]
name = "krpc_mars"
version = "0.7.0"
authors = ["bartslinger", "cahu"]
build = "build.rs"
license = "GPL-3.0"
edition = "2021"

[dependencies]
protobuf = "2.0"
tokio = { "version" = "1.22.0", "features" = ["sync", "net", "io-util"] }
tokio-stream = "0.1.11"
futures-util = "0.3.25"
bytes = "1.3.0"

[build-dependencies]
protoc-rust = "2.0"
